fix: spacing conflict

--- a/src/styles/pages/schedule-page.scss
+++ b/src/styles/pages/schedule-page.scss
@@ -13,7 +13,7 @@
     flex-direction: column;
     max-width: 100%;
     width: 22.5rem;
-    gap: 0.5em;
+    // gap: 0.2rem;
     flex: 0 0 auto;
 
     &__header {
@@ -37,8 +37,6 @@
     .search-filter-row {
       display: flex;
       align-items: center;
-      gap: 0.75rem;
-      width: 100%;
       margin-bottom: 0.5rem;
 
       .search-bar {
@@ -54,7 +52,7 @@
     .term-filter-row {
       display: flex;
       align-items: center;
-      gap: 0.75rem;
+      gap: 0.25rem;
       width: 100%;
       margin-bottom: 0.75rem;
 
